--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
 							muted=""
 							loop=""
 							class="video-landing__el"
-							src="https://www.robmills.com.au/files/RMA_TheSearch_Final_20190408_7Kb_15_seconds.mp4"
+							src="./assets/videos/unzen 17 starting video-highlight.mp4"
 						></video>
 					</section>
 					<section class="home-projects" data-projects-section="">
