--- a/index.html
+++ b/index.html
@@ -681,14 +681,14 @@
 									<ul class="nav-subnav" data-nav-sub-nav-inner="">
 										<li class="t-heading-medium">
 											<a
-												href="https://lakshmivseelam.github.io/urbanzenmock/contact"
+												href="#"
 											>
 												Get in touch
 											</a>
 										</li>
 										<li class="t-heading-medium">
 											<a
-												href="https://lakshmivseelam.github.io/urbanzenmock/careers"
+												href="#"
 											>
 												Careers
 											</a>
@@ -989,7 +989,7 @@
 								>
 									<div class="project-tile__img pos-rel">
 										<img
-											src="./assets/rma_kenleycourt_hero_170712_054346.jpg"
+											src="./assets/images/1.jpg"
 											data-src="https://lakshmivseelam.github.io/urbanzenmock/files/architecture/kenley-court/_smallImage/rma_kenleycourt_hero_170712_054346.jpg"
 											data-srcset="https://lakshmivseelam.github.io/urbanzenmock/files/architecture/kenley-court/_mediumImage/rma_kenleycourt_hero_170712_054346.jpg 1300w,  https://lakshmivseelam.github.io/urbanzenmock/files/architecture/kenley-court/_smallImage/rma_kenleycourt_hero_170712_054346.jpg 750w"
 											class="img-cover lazy-fade lazyloaded"
@@ -1004,7 +1004,7 @@
 								<a href="#" class="project-tile swiper-slide swiper-slide-next">
 									<div class="project-tile__img pos-rel">
 										<img
-											src="./assets/GreatOceanRoadResidence_RobMillsHERO.jpg"
+											src="./assets/images/2.jpg"
 											data-src="https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/GreatOceanRoadResidence_RobMillsHERO.jpg"
 											data-srcset="https://lakshmivseelam.github.io/urbanzenmock/files/_mediumImage/GreatOceanRoadResidence_RobMillsHERO.jpg 1300w,  https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/GreatOceanRoadResidence_RobMillsHERO.jpg 750w"
 											class="img-cover lazy-fade lazyloaded"
@@ -1019,7 +1019,7 @@
 								<a href="#" class="project-tile swiper-slide">
 									<div class="project-tile__img pos-rel">
 										<img
-											src="./assets/GreatOceanRoadResidence_RobMillsHERO.jpg"
+											src="./assets/images/3.jpg"
 											class="img-cover lazyload lazy-fade"
 											alt="Rma Stuartstreet Hero"
 										/>
@@ -1031,7 +1031,7 @@
 								<a href="#" class="project-tile swiper-slide">
 									<div class="project-tile__img pos-rel">
 										<img
-											src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
+											src="./assets/images/4.jpg"
 											class="img-cover lazyload lazy-fade"
 											alt="17 Huntingfield317721 Mark Roper"
 										/>
@@ -1043,9 +1043,7 @@
 								<a href="#" class="project-tile swiper-slide">
 									<div class="project-tile__img pos-rel">
 										<img
-											src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-											data-src="https://lakshmivseelam.github.io/urbanzenmock/files/architecture/mowbray/_smallImage/13-Dendy-Street-Brighton2567811.jpg"
-											data-srcset="https://lakshmivseelam.github.io/urbanzenmock/files/architecture/mowbray/_mediumImage/13-Dendy-Street-Brighton2567811.jpg 1300w,  https://lakshmivseelam.github.io/urbanzenmock/files/architecture/mowbray/_smallImage/13-Dendy-Street-Brighton2567811.jpg 750w"
+											src="./assets/images/5.jpg"
 											class="img-cover lazyload lazy-fade"
 											alt="13 Dendy Street Brighton2567811"
 										/>
@@ -1057,9 +1055,7 @@
 								<a href="#" class="project-tile swiper-slide">
 									<div class="project-tile__img pos-rel">
 										<img
-											src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-											data-src="https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/rma_ross_hero.jpg"
-											data-srcset="https://lakshmivseelam.github.io/urbanzenmock/files/_mediumImage/rma_ross_hero.jpg 1300w,  https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/rma_ross_hero.jpg 750w"
+											src="./assets/images/6.jpg"
 											class="img-cover lazyload lazy-fade"
 											alt="Rma Ross Hero"
 										/>
@@ -1071,9 +1067,7 @@
 								<a href="#" class="project-tile swiper-slide">
 									<div class="project-tile__img pos-rel">
 										<img
-											src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-											data-src="https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/Rob-Mills_Sorrento-House_01-Sml.jpg"
-											data-srcset="https://lakshmivseelam.github.io/urbanzenmock/files/_mediumImage/Rob-Mills_Sorrento-House_01-Sml.jpg 1300w,  https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/Rob-Mills_Sorrento-House_01-Sml.jpg 750w"
+											src="./assets/images/7.jpg"
 											class="img-cover lazyload lazy-fade"
 											alt="Rob Mills Sorrento House 01 Sml"
 										/>
@@ -1085,9 +1079,7 @@
 								<a href="#" class="project-tile swiper-slide">
 									<div class="project-tile__img pos-rel">
 										<img
-											src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-											data-src="https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/rma_selbourne_hero_01.jpg"
-											data-srcset="https://lakshmivseelam.github.io/urbanzenmock/files/_mediumImage/rma_selbourne_hero_01.jpg 1300w,  https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/rma_selbourne_hero_01.jpg 750w"
+											src="./assets/images/8.jpg"
 											class="img-cover lazyload lazy-fade"
 											alt="Rma Selbourne Hero 01"
 										/>
@@ -1112,9 +1104,7 @@
 								style="transform: translate(0%, 25%)"
 							>
 								<img
-									src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
-									data-src="https://lakshmivseelam.github.io/urbanzenmock/files/yourexperience/your-experience/_largeImage/rob-mills-your-experience-10_190322_090430.jpg"
-									data-srcset="https://lakshmivseelam.github.io/urbanzenmock/files/yourexperience/your-experience/_xLargeImage/rob-mills-your-experience-10_190322_090430.jpg 3000w, https://lakshmivseelam.github.io/urbanzenmock/files/yourexperience/your-experience/_largeImage/rob-mills-your-experience-10_190322_090430.jpg 2000w, https://lakshmivseelam.github.io/urbanzenmock/files/yourexperience/your-experience/_mediumImage/rob-mills-your-experience-10_190322_090430.jpg 1300w,  https://lakshmivseelam.github.io/urbanzenmock/files/yourexperience/your-experience/_smallImage/rob-mills-your-experience-10_190322_090430.jpg 750w"
+									src="./assets/images/9.jpg"
 									sizes="100vw"
 									class="lazyload lazy-fade img-cover"
 								/>
@@ -1201,7 +1191,7 @@
 										class="lazypreload lazy-fade img-cover lazyloaded"
 									>
 										<source
-											src="https://lakshmivseelam.github.io/urbanzenmock/files/experience/land/RMA_Web_land_city_2.mp4"
+											src="./assets/videos/land 1.mp4"
 										/>
 									</video>
 								</div>
@@ -1271,7 +1261,7 @@
 										class="lazypreload lazy-fade img-cover lazyloaded"
 									>
 										<source
-											src="https://lakshmivseelam.github.io/urbanzenmock/files/architecture/stuart-street/rma_stuartstreet_timelapse.mp4"
+											src="./assets/videos/architecture 1.mp4"
 										/>
 									</video>
 								</div>
@@ -1340,7 +1330,7 @@
 										class="lazypreload lazy-fade img-cover lazyloaded"
 									>
 										<source
-											src="https://lakshmivseelam.github.io/urbanzenmock/files/experience/interiors/RMA_Interiors-Smaller_2023-02-10-063237_takf.mp4"
+											src="./assets/videos/interior 1.mp4"
 										/>
 									</video>
 								</div>
@@ -1410,7 +1400,7 @@
 										class="lazypreload lazy-fade img-cover lazyloaded"
 									>
 										<source
-											src="https://lakshmivseelam.github.io/urbanzenmock/files/architecture/aireys-inlet/RMA_web_Future_Aireys-Inlet.mp4"
+											src="./assets/videos/strategy 1.mp4"
 										/>
 									</video>
 								</div>
@@ -1444,8 +1434,7 @@
 							<div class="link-column" data-links-column="" style="opacity: 0">
 								<a href="#" class="link-column__img">
 									<img
-										src="./assets/link-1.jpg"
-										data-src="https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/link-1.jpg"
+										src="./assets/images/1.jpg"
 										class="img-cover lazypreload lazy-fade lazyloaded"
 										alt="Link 1"
 									/>
@@ -1471,8 +1460,7 @@
 							<div class="link-column" data-links-column="" style="opacity: 0">
 								<a href="#" class="link-column__img">
 									<img
-										src="./assets/link-2.jpg"
-										data-src="https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/link-2.jpg"
+										src="./assets/images/2.jpg"
 										class="img-cover lazypreload lazy-fade lazyloaded"
 										alt="Link 2"
 									/>
@@ -1498,8 +1486,7 @@
 							<div class="link-column" data-links-column="" style="opacity: 0">
 								<a href="#" class="link-column__img">
 									<img
-										src="./assets/link-3.jpg"
-										data-src="https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/link-3.jpg"
+										src="./assets/images/3.jpg"
 										class="img-cover lazypreload lazy-fade lazyloaded"
 										alt="Link 3"
 									/>
@@ -1525,8 +1512,7 @@
 							<div class="link-column" data-links-column="" style="opacity: 0">
 								<a href="#" class="link-column__img">
 									<img
-										src="./assets/link-4.jpg"
-										data-src="https://lakshmivseelam.github.io/urbanzenmock/files/_smallImage/link-4.jpg"
+										src="./assets/images/4.jpg"
 										class="img-cover lazypreload lazy-fade lazyloaded"
 										alt="Link 4"
 									/>
