--- a/index.html
+++ b/index.html
@@ -1930,7 +1930,7 @@
 				src="https://www.facebook.com/tr?id=272076454039494&amp;ev=PageView&amp;noscript=1"
 		/></noscript>
 		<script type="text/javascript" id="" src="./assets/saved_resource"></script>
-		<div class="ub-emb-container">
+		<!-- <div class="ub-emb-container">
 			<div>
 				<div class="ub-emb-overlay">
 					<div class="ub-emb-backdrop"></div>
@@ -1959,7 +1959,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</body>
 	<grammarly-desktop-integration data-grammarly-shadow-root="true"
 		><template shadowrootmode="open"
